# publications

./: README.md
ctf-writeups/curta-cup/AddressGame/: Solve.t.sol  profanity2.patch  writeup.md
ctf-writeups/curta-cup/LatentRisk/: Solve.t.sol  writeup.md
ctf-writeups/curta-cup/PairAssetManager/: Solve.t.sol  writeup.md
ctf-writeups/curta-cup/Stake Frens/: ETHFlashloan.sol  README.md  RelicMock.sol  Solve.s.sol
ctf-writeups/curta-cup/Submerged/: README.md
ctf-writeups/curta-cup/Usurper's Throne/: README.md  Solve.s.sol
ctf-writeups/paradigm2023/: readme.md
ctf-writeups/paradigm2023/100%/: Solve.sol  writeup.md
ctf-writeups/paradigm2023/black_sheep/: Solve.s.sol  writeup.md
ctf-writeups/paradigm2023/cosmic_radiation/: readme.md
ctf-writeups/paradigm2023/daipp/: Solve.sol  writeup.md
ctf-writeups/paradigm2023/dodont/: Solve.sol  writeup.md
ctf-writeups/paradigm2023/dragon_tyrant/: writeup.md
ctf-writeups/paradigm2023/dropper/: AirdropGas.huff  Airdropp.huff  Solve.s.sol  writeup.md
ctf-writeups/paradigm2023/enterprise_blockchain/: readme.md
ctf-writeups/paradigm2023/free_real_estate/: readme.md
ctf-writeups/paradigm2023/grains_of_sand/: Solve.s.sol  writeup.md
ctf-writeups/paradigm2023/hello_world/: writeup.md
ctf-writeups/paradigm2023/hellow_world/: Solve.sol  writeup.md
ctf-writeups/paradigm2023/hopping_into_place/: exploit.sol  readme.md
ctf-writeups/paradigm2023/jotterp/: Cargo.toml  chall-dump.txt  rbpf.diff  solver-local.rs  solver-remote.rs  writeup.md
ctf-writeups/paradigm2023/oven/: writeup.md
(+8 files in other folders)
