[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
solana-program = "1.17.3"
solana-program-test = "1.17.3"
solana-sdk = "1.17.3"
tokio = { version = "1.33.0", features = ["macros"] }

[patch.crates-io]
solana_rbpf = { path = "../rbpf" }
